# imageprocessor

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  apply_color.c  apply_color.h  auto-gen.sh  auto_tone.c  auto_tone.h  autogen.sh  brightness.c  brightness.h  brush.c  brush.h  bw.c  bw.h  color_balance.c  color_balance.h  color_conversion.c  color_conversion.h  colorize.c  colorize.h  comics.c  comics.h  common.c  common.h  common_types.h  configure  configure.ac  contrast.c  contrast.h  crop.c  crop.h  dong2010.c  dong2010.h  emd.c  emd.h  exif.c  exif.h  (+66 more)
apply_color_test/: README.md  report.html  test_dong2010.sh  test_dong2010_colors.sh  test_reinhard2001.sh
articles/color-mapping/: README.md
articles/image-effects/3d-lut/: README.md
articles/image-effects/color-temperature/: README.md
articles/image-effects/color-transfer-reinhard-2001/: README.md
articles/image-effects/comics/: README.md
articles/image-effects/day-to-night/: README.md
articles/image-effects/fantasy-forest/: README.md
articles/image-effects/recolor-desaturate/: README.md
articles/image-effects/sincity/: README.md
articles/misc/laplace/: README.md
articles/misc/levels/: README.md
examples/: apply_color.c  apply_color_dong2010.c  apply_color_reinhard2001.c  apply_lut.c  color_conv_test.c  comics-example.c  day-to-night.c  dominant_colors.c  eye-enhancer.cpp  fantasy-forest.c  laplace.c  levels.c  median.c  replace_color.c  sincity.c  tracking.cpp  true-blood.c  video-processing.c
opencv4/: get.opencv4  install.opencv4
